feat: add query parameter on route /scenarios/calculate to allow saving on db
